# system-design-interview-study

./: README.md  messaging.md
chap04/: 김선환-분산메시지큐.md
chapter-05/: 임형규-지표 모니터링 및 경보 시스템.md
chapter-05/project/: .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yml  project proposal.md
chapter-08/: 홍준혁_URL 단축기 설계.md
chapter-08/url/: FileUrlRepository.java  UrlController.java  UrlMapping.java  UrlRedirectResponse.java  UrlShortenRequest.java  (+2 more)
chapter-13/: README.md  김현수-검색어_자동완성_시스템.md
chapter-13/project/: Dockerfile  Dockerfile.redis  Makefile  README.md  deployment.yaml  docker-compose.yml  main.py  pyproject.toml  setup_redis.py
chapter-13/project/src/constants/: constant.py
chapter-13/project/src/models/: trie.py
chapter-13/project/src/utils/: utils.py
chapter-13/project/templates/: index.html  suggestions.html
chapter-13/project/test/: locustfile.py  test_mode.txt  test_result.md
chapter-13/project/test/first_test_10second_watch/: benchmark_asyncio_h11_20250718_222757.json  benchmark_uvloop_h11_20250718_223401.json  benchmark_uvloop_httptools_20250718_223745.json
chapter-13/project/test/second_test_1second_watch/: benchmark_asyncio_h11_20250718_224839.json  benchmark_uvloop_h11_20250718_224536.json  benchmark_uvloop_httptools_20250718_224257.json
chapter-13/project/test/third_test_1second_watch_and_more_one_more_vcpu_memory/: benchmark_asyncio_h11_20250718_233902.json  benchmark_uvloop_h11_20250718_234159.json  benchmark_uvloop_httptools_20250718_234343.json
fastcampus2/: build.gradle.kts  request1.txt  settings.gradle.kts
(+114 files in other folders)
