[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "pygtrie>=2.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "locust>=2.37.14",
]
